<resources>
    <string name="app_name">Atmosphere Sensor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_charts">Charts</string>
    <string name="nav_livecharts">Live Charts</string>
    <string name="nav_heatmap">Heatmap</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Charts</item>
        <item>Heatmap</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_settings">Settings</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>

    <string name="title_activity_sign_in_">SignIn_Activity</string>
    <string name="item">Item</string>
    <string name="other">Other</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings2">settings2</string>
    <string name="Log_In">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="User">User</string>
    <string name="Password">Password</string>
    <string name="Language">Language</string>
    <string name="ChangeLanguage">Ok</string>
    <string name="Clear_User">Delete User</string>
    <string name="Clear_Data">Clear Data</string>
    <string name="Export_Data">Export Data</string>
    <string name="descrip">Nous avons comme objectif mesurer l\'atmosphère ambiante afin d’améliorer la performance vitale pour travailler, faire du sport etc, grâce à un analyse des donnés. Pour le projet, il s’agit d’une boite contenant plusieurs capteurs, un GPS et un module Bluetooth HC-05, tous connectés à un Arduino Uno. Le module Bluetooth sert à pouvoir communiquer avec un portable Android, sur lequel une application que nous allons aussi développer sera installée. Cette application donne la possibilité de se connecter pour avoir différents profils pour chaque utilisateur.</string>
    <string name="titleDesc">Description du projet</string>
</resources>
