<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_livecharts"
            android:icon="@drawable/livecharts_icon"
            android:title="@string/nav_livecharts" />
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/charts_icon"
            android:title="@string/nav_charts" />
        <item
            android:id="@+id/nav_heatmap"
            android:icon="@drawable/heatmap_icon"
            android:title="@string/nav_heatmap" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings_icon"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/aboutus_icon"
                android:title="@string/nav_about_us" />

        </menu>
    </item>


</menu>
