<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="davidfdez.appp2ifinal.activity.Settings"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Spinner
        android:id="@+id/spin1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="5dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <TextView
        android:id="@+id/etSett1"
        android:layout_width="217dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/Language"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="setLanguage"
        android:text="@string/ChangeLanguage"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="59dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="345dp"
        android:layout_height="42dp"
        android:text="@string/Clear_User"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/spin1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:text="@string/Clear_Data"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintRight_toRightOf="@+id/button6"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:text="@string/Export_Data"
        android:layout_marginStart="21dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="166dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="295dp"
        android:layout_marginLeft="21dp" />

</android.support.constraint.ConstraintLayout>
